--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       background-color: var(--background-color); /* Set background color */
     }
 
-    h1 {
-      margin-bottom: 20px;
-      color: var(--title-color); /* Set title color */
+    #logo {
+      width: 300px; 
+      height: auto; 
+      margin-bottom: 20px; 
     }
 
     #searchForm {
       display: flex;
-      border-radius: 5px;
+      align-items: center; /* Center elements vertically within the form */
+      border-radius: 5px; 
       overflow: hidden; /* Hide the input box's overflow for rounded corners */
       background-color: var(--form-background-color); /* Set form background color */
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -33,6 +35,7 @@
       width: 300px;
       font-size: 16px;
       color: var(--input-color); /* Set input text color */
+      border-radius: 5px 0 0 5px; /* Rounded corners on the left */
     }
 
     button {
@@ -41,6 +44,7 @@
       padding: 10px 20px;
       border: none;
       cursor: pointer;
+      border-radius: 0 5px 5px 0; /* Rounded corners on the right */
     }
 
     #colorPicker {
@@ -94,20 +98,14 @@
   </style>
 </head>
 <body>
-  <h1 id="logo">AlexWeb</h1>
-  <p class="version">AlexWeb Public 1.0</p> <form id="searchForm">
+  <img src="https://static1.textcraft.net/data1/8/7/87311714e2c65cd4c9350d465142114386d74561f93a4b5c479a52aacef099ad9caadce67bd7686eda39a3ee5e6b4b0d3255bfef95601890afd80709e93c10c22d460095b4268cca91fde52d.png" alt="AlexWeb Logo" id="logo">
+  <p class="version">AlexWeb privateload 1.0</p> 
+  <form id="searchForm">
     <input type="text" id="searchInput" placeholder="Search the web...">
     <button type="submit">Search</button>
   </form>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <button id="colorPickerButton"><i class="fas fa-palette"></i> Change Colors</button>
-  <div id="colorPicker" class="hidden">
-    <div class="color-option default" data-color="default">Default</div>
-    <div class="color-option red" data-color="red">Red</div>
-    <div class="color-option blue" data-color="blue">Blue</div>
-    <div class="color-option green" data-color="green">Green</div>
-  </div>
 
   <footer>
     <p>AlexWeb is a project by Alex using DuckDuckGo. DuckDuckGo is owned by DuckDuckGo, Inc.</p>
