--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
   <img src="https://static1.textcraft.net/data1/8/7/87311714e2c65cd4c9350d465142114386d74561f93a4b5c479a52aacef099ad9caadce67bd7686eda39a3ee5e6b4b0d3255bfef95601890afd80709e93c10c22d460095b4268cca91fde52d.png" alt="AlexWeb Logo" id="logo">
-  <p class="version">AlexWeb privateload 1.0</p> 
+  <p class="version">AlexWeb public 1.0</p> 
   <form id="searchForm">
     <input type="text" id="searchInput" placeholder="Search the web...">
     <button type="submit">Search</button>
