--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between; /* Distribute space evenly between items */
       height: 100vh;
       margin: 0;
       background-color: var(--background-color); /* Set background color */
     }
 
-    #logo {
-      width: 300px; 
-      height: auto; 
-      margin-bottom: 20px; 
+    h1 {
+      margin-bottom: 20px;
+      color: var(--title-color); /* Set title color */
     }
 
     #searchForm {
       display: flex;
       align-items: center; /* Center elements vertically within the form */
-      border-radius: 5px; 
+      border-radius: 5px;
       overflow: hidden; /* Hide the input box's overflow for rounded corners */
       background-color: var(--form-background-color); /* Set form background color */
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -95,11 +94,18 @@
       font-size: 12px;
       color: gray;
     }
+
+    footer {
+      text-align: center; 
+      font-size: 14px; /* Or adjust to match your desired size */
+      color: gray; 
+      margin-bottom: 20px; /* Add some margin */
+    }
   </style>
 </head>
 <body>
-  <img src="https://static1.textcraft.net/data1/8/7/87311714e2c65cd4c9350d465142114386d74561f93a4b5c479a52aacef099ad9caadce67bd7686eda39a3ee5e6b4b0d3255bfef95601890afd80709e93c10c22d460095b4268cca91fde52d.png" alt="AlexWeb Logo" id="logo">
-  <p class="version">AlexWeb public 1.0</p> 
+  <h1 id="logo">AlexWeb</h1> 
+  <p class="version">AlexWeb privateload 1.0</p> 
   <form id="searchForm">
     <input type="text" id="searchInput" placeholder="Search the web...">
     <button type="submit">Search</button>
