--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
   </style>
 </head>
 <body>
-  <h1 id="logo">AlexWeb</h1> 
+  <div>
+    <h1 id="logo">AlexWeb</h1>
+  </div>
   <p class="version">AlexWeb privateload 1.0</p> 
 
   <form id="searchForm">
