--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 10px; /* Adjust the margin as needed */
       color: var(--title-color); /* Set title color */
     }
 
@@ -104,13 +104,15 @@
   </style>
 </head>
 <body>
-  <h1 id="logo">AlexWeb</h1> 
-  <p class="version">AlexWeb privateload 1.0</p> 
+  <div style="display: flex; flex-direction: column; align-items: center;">
+    <h1 id="logo">AlexWeb</h1> 
+    <p class="version">AlexWeb privateload 1.0</p> 
 
-  <form id="searchForm">
-    <input type="text" id="searchInput" placeholder="Search the web...">
-    <button type="submit">Search</button>
-  </form>
+    <form id="searchForm">
+      <input type="text" id="searchInput" placeholder="Search the web...">
+      <button type="submit">Search</button>
+    </form>
+  </div>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
