--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between; /* Distribute space evenly between items */
+      justify-content: center;
       height: 100vh;
       margin: 0;
       background-color: var(--background-color); /* Set background color */
@@ -21,7 +21,6 @@
 
     #searchForm {
       display: flex;
-      align-items: center; /* Center elements vertically within the form */
       border-radius: 5px;
       overflow: hidden; /* Hide the input box's overflow for rounded corners */
       background-color: var(--form-background-color); /* Set form background color */
@@ -34,7 +33,6 @@
       width: 300px;
       font-size: 16px;
       color: var(--input-color); /* Set input text color */
-      border-radius: 5px 0 0 5px; /* Rounded corners on the left */
     }
 
     button {
@@ -43,7 +41,6 @@
       padding: 10px 20px;
       border: none;
       cursor: pointer;
-      border-radius: 0 5px 5px 0; /* Rounded corners on the right */
     }
 
     #colorPicker {
@@ -94,36 +91,23 @@
       font-size: 12px;
       color: gray;
     }
-
-    footer {
-      text-align: center; 
-      font-size: 14px; /* Or adjust to match your desired size */
-      color: gray; 
-      margin-bottom: 20px; /* Add some margin */
-    }
-
-    /* Style for the main content area */
-    .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 50vh; /* Adjust the height as needed */
-    }
   </style>
 </head>
 <body>
-  <h1 id="logo">AlexWeb</h1> 
-  <p class="version">AlexWeb privateload 1.0</p> 
-
-  <div class="content"> 
-    <form id="searchForm">
-      <input type="text" id="searchInput" placeholder="Search the web...">
-      <button type="submit">Search</button>
-    </form>
-  </div>
+  <h1 id="logo">AlexWeb</h1>
+  <p class="version">AlexWeb Public website 1.0</p> <form id="searchForm">
+    <input type="text" id="searchInput" placeholder="Search the web...">
+    <button type="submit">Search</button>
+  </form>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <button id="colorPickerButton"><i class="fas fa-palette"></i> Change Colors</button>
+  <div id="colorPicker" class="hidden">
+    <div class="color-option default" data-color="default">Default</div>
+    <div class="color-option red" data-color="red">Red</div>
+    <div class="color-option blue" data-color="blue">Blue</div>
+    <div class="color-option green" data-color="green">Green</div>
+  </div>
 
   <footer>
     <p>AlexWeb is a project by Alex using DuckDuckGo. DuckDuckGo is owned by DuckDuckGo, Inc.</p>
