--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between; /* Distribute space evenly between items */
       height: 100vh;
       margin: 0;
       background-color: var(--background-color); /* Set background color */
@@ -91,11 +91,18 @@
       font-size: 12px;
       color: gray;
     }
+
+    footer {
+      text-align: center; 
+      font-size: 12px; /* Adjust the font size as needed */
+      color: gray; 
+      margin-bottom: 20px; /* Add some margin */
+    }
   </style>
 </head>
 <body>
   <h1 id="logo">AlexWeb</h1>
-  <p class="version">AlexWeb Public website 1.0</p> <form id="searchForm">
+  <p class="version">AlexWeb privateload 1.0</p> <form id="searchForm">
     <input type="text" id="searchInput" placeholder="Search the web...">
     <button type="submit">Search</button>
   </form>
