--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between; /* Distribute space evenly between items */
+      justify-content: center;
       height: 100vh;
       margin: 0;
       background-color: var(--background-color); /* Set background color */
@@ -90,13 +90,6 @@
       left: 10px;
       font-size: 12px;
       color: gray;
-    }
-
-    footer {
-      text-align: center; 
-      font-size: 12px; /* Adjust the font size as needed */
-      color: gray; 
-      margin-bottom: 20px; /* Add some margin */
     }
   </style>
 </head>
