--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
   <h1 id="logo">AlexWeb</h1>
-  <p class="version">AlexWeb privateload 1.0</p> <form id="searchForm">
+  <p class="version">AlexWeb public alpha 1.0</p> <form id="searchForm">
     <input type="text" id="searchInput" placeholder="Search the web...">
     <button type="submit">Search</button>
   </form>
